Fix colors of form elements in dark mode.

--- a/bemani/frontend/static/themes/dark/form.css
+++ b/bemani/frontend/static/themes/dark/form.css
@@ -45,14 +45,15 @@ div.buttons {
 }
 
 input[type="submit"] {
-    border: 1px solid #19480a;
+    border: 1px solid #55954a;
     color: #242526;
-    background: #49B979;
+    background: #42763a;
+    color: #cedfce;
     margin-right: 5px;
 }
 
 input[type="button"], button.nav, button.toggle, button.edit, button.add, button.viewmore, button.btn-default {
-    border: 1px solid #6a6a6a;
+    border: 1px solid #535353;
     color: #b0b1b2;
     background: #282828;
     margin-right: 5px;
@@ -68,20 +69,19 @@ input[type="submit"], input[type="button"], button {
 }
 
 input[type="text"], input[type="password"], textarea {
-    border: 1px solid #6a6a6a;
+    border: 1px solid #535353;
     padding: 4px;
     border-radius: 0px;
     background-color: #1f1f1f;
+    color: #cecece;
 }
 
 select {
-    border: 1px solid #6a6a6a;
+    border: 1px solid #535353;
     padding: 4px 4px 3px 4px;
     border-radius: 0px;
     background: #1f1f1f;
-}
-input {
-    #1f1f1f
+    color: #cecece;
 }
 
 input[type="button"] {
@@ -95,7 +95,10 @@ button.toggle:not(:last-child):not(:only-child), button.edit:not(:last-child):no
 span + button.edit, span + button.toggle, span + button.delete, span + button.add,
 div + button.edit, div + button.toggle, div + button.delete, div + button.add {
     margin-left: 15px;
-    border: 1px solid #6a6a6a;
+}
+
+span + button {
+    border: 1px solid #535353;
     background-color: #282828;
     color: #cecece;
 }
@@ -103,7 +106,7 @@ div + button.edit, div + button.toggle, div + button.delete, div + button.add {
 button.nav {
     margin-bottom: 5px;
     margin-right: 0px;
-    border: 1px solid #6a6a6a;
+    border: 1px solid #535353;
     background-color: #282828;
 }
 
@@ -130,8 +133,9 @@ button {
 }
 
 button.delete {
-    border: 1px solid #5d5d5d;
-    background: #B94949;
+    border: 1px solid #9b3c3c;
+    background: #7a3030;
+    color: #dfcece;
 }
 
 .popn-nav button, .settings-nav button {
