--- a/bemani/frontend/static/themes/default/form.css
+++ b/bemani/frontend/static/themes/default/form.css
@@ -47,6 +47,7 @@ div.buttons {
 input[type="submit"] {
     border: 1px solid #cddcc1;
     background: #e7ffd4;
+    color: #003000;
     margin-right: 5px;
 }
 
@@ -117,6 +118,7 @@ button.active {
 button.delete {
     border: 1px solid #d6caca;
     background: #ffe4e4;
+    color: #300000;
 }
 
 .popn-nav button, .settings-nav button {
